[package]
name = "balanceof-slot-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
tokio = {version = "1.11.0", features = ["macros"] }

#cli
clap = "3.0.7"

#error
anyhow = "1.0.44"

#ui
indicatif = "0.16.2"

#misc
hex = "0.4.3"
serde_json = "1.0.67"